# iliasqc

./: AGENTS.md  CHANGELOG.md  README.md  pool_combinations_1_points.csv  pool_overview.csv  pool_test.txt  pyproject.toml  test_questions.txt  tiqi.py
.github/: dependabot.yml
.github/workflows/: release-please.yml  tests.yml
recipe/: meta.yaml
src/iliasqc/: __init__.py  cli.py  combine.py  convert.py  ilias.py  parser.py  qti.py  quiz.py  template.py
tests/: __init__.py  test_cli.py  test_combine.py  test_convert.py  test_ilias.py  test_parser.py  test_qti.py  test_quiz.py  test_template.py
