[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "iliasqc"
version = "0.1.0"
description = "Python package to convert txt files into zip folder that can be uploaded to Ilias to create question pools."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Famke Bäuerle" }
]
keywords = ["ilias", "question pool", "e-learning", "conversion"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/famosab/iliasqc"
"Bug Tracker" = "https://github.com/famosab/iliasqc/issues"

[project.scripts]
iliasqc = "iliasqc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
