[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "iliasqc"
version = "0.1.1"
description = "Python package to convert txt files into zip folder that can be uploaded to Ilias to create question pools."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Famke Bäuerle" }
]
keywords = ["ilias", "question pool", "e-learning", "conversion"]
classifiers = [
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/famosab/iliasqc"
"Bug Tracker" = "https://github.com/famosab/iliasqc/issues"

[project.scripts]
iliasqc = "iliasqc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/iliasqc"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
]
ignore = [
  "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["iliasqc"]
